bisonc++ (5.00.00) (WIP)

  * new member: setDebug(DebugMode__)

  * The SType::data() member is now obsolete and has been removed.

  * Reimplemented handling polymorphic semantic values. shared pointers are no
    longer used. Details: see README.polymorphic-technical

  * The semantic value type STYPE__ (the class Meta__::SType) member operator
    bool() const returns true if its member tag() returns a valid Tag__,
    otherwise it returns false. 
    False is returned for default constructed STYPE__ values.
    Previous implementations of STYPE__ implemented an undocumented member
    pointer (->) operator for calling get() and data(). This operator is no
    longer available. Instead of -> the member selector operator (.) should be
    used. E.g., stype.get<Tag__::INT>().

  * Added options/directives warn-tag-mismatches and no-constructor-checks, 
    and added option --polymorphic-code (-L). 

  * Mismatches between the types of nonterminals and the types of the first
    elements of their production rules previously resulted in a `type clash of
    default action' warning. Such mismatches are now considered errors.

  * The member SType::emplace (See the 4.13.00 log entry) was renamed to
    SType::assign: it doesn't emplace, but assign. The construction 
    $$(-optional arguments-); can be used in action blocks to do
    $$.emplace<Tag of the rule's semantic value>(-optional arguments-); 


+ ARGUMENT:

  * The formerly available option --no-default-action-return was renamed to
    default-actions (-d replacing -N), and can now also be used as a
    directive: %default-actions.  

  * Option --polymorphic-inline-skeleton (-m) is not used anymore and was
    removed.

  * The option --include-only has been dropped (although it was mentioned in
    the usage info, it had in fact not been available for quite some time).

  * Bisonc++'s man-page and documentation was updated.

  * After parsing a grammar file only plain warning messages (i.e., no