@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V5.00.00 on Wed, 30 Mar 2016 15:18:57 +0200
+// Generated by Bisonc++ V5.00.00 on Wed, 30 Mar 2016 15:35:54 +0200
 
 // $insert class.ih
 #include "parser.ih"
@@ -1730,10 +1730,10 @@ void ParserBase::setDebug(bool mode)
     d_debug__ = mode;
 }
 
-void ParserBase::setDebug(DebugMode__ mode)
+void ParserBase::setDebug(int mode)
 {
-    d_actionCases__ = mode == ACTIONCASES__;
-    d_debug__ =       mode == ON__;
+    d_actionCases__ = mode & ACTIONCASES__;
+    d_debug__ =       mode & ON__;
 }
 
 void Parser::print__()
@@ -1831,7 +1831,7 @@ try
 // $insert executeactioncases
 
     if (d_actionCases__)
-        s_out__ << "executeAction case " << production << '\n';
+        s_out__ << "executeAction case " << production << '\n' << dflush__;
     switch (production)
     {
         // $insert actioncases
