@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V5.00.00 on Wed, 30 Mar 2016 15:18:57 +0200
+// Generated by Bisonc++ V5.00.00 on Wed, 30 Mar 2016 15:35:54 +0200
 
 #ifndef ParserBase_h_included
 #define ParserBase_h_included
@@ -403,9 +403,9 @@ class ParserBase
     public:
         enum DebugMode__
         {
-            OFF__,
-            ON__,
-            ACTIONCASES__
+            OFF__           = 0,
+            ON__            = 1 << 0,
+            ACTIONCASES__   = 1 << 1
         };
 
 // $insert tokens
@@ -516,7 +516,7 @@ class ParserBase
 
     public:
         void setDebug(bool mode);
-        void setDebug(DebugMode__ mode);
+        void setDebug(int mode);
 }; 
 
 inline bool ParserBase::debug() const
