@@ -135,10 +135,10 @@ void \@Base::setDebug(bool mode)
     d_debug__ = mode;
 }
 
-void \@Base::setDebug(DebugMode__ mode)
+void \@Base::setDebug(int mode)
 {
-    d_actionCases__ = mode == ACTIONCASES__;
-    d_debug__ =       mode == ON__;
+    d_actionCases__ = mode & ACTIONCASES__;
+    d_debug__ =       mode & ON__;
 }
 
 void \@::print__()
